Fixed li alignment issue

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -20,6 +20,10 @@ body p {
   text-align: left;
 }
 
+li {
+  text-align: left;
+}
+
 .navbar {
   margin-bottom: 0;
 }
